sharedata by params

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-
-<app-one></app-one>
-<app-two></app-two>
-
-
+<!--The content below is only a placeholder and can be replaced.-->
+<!-- <app-list-employees></app-list-employees> -->
 <router-outlet></router-outlet>
+
+
